--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ><img src="https://via.placeholder.com/300x400?text=4U"
         /></span>
         <span class="letter"
-          ><img src="https://via.placeholder.com/300x400?text=5L"
+          ><img src="/img/5L.jpg"
         /></span>
         <span class="letter"
           ><img src="https://via.placeholder.com/300x400?text=6T"
